syntax = "proto3";

package ro.alexk.energyutilityplatformbackend.grpc;

option java_multiple_files = true;
option java_package = "ro.alexk.energyutilityplatformbackend.grpc";

message Message {
  string from = 1;
  string to = 2;
  string timestamp = 3;
  string message = 4;
}

message TypingNotification {
  string from = 1;
  string to = 2;
  bool isTyping = 3;
}

message MessageReadNotification {
  string from = 1;
  string to = 2;
}

message nothing {}

service ChatService {
  rpc sendMessage(Message) returns (Message);
  rpc sendTypingNotification(TypingNotification) returns (nothing);
  rpc sendMessageReadNotification(MessageReadNotification) returns(nothing);
}